Added multiple projects
Added projects as business card, gaming controller, IoT board.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 /SmartTrashCan/SmartTrashCan-backups
 *.lck
+/BusinessCard/SmartTrashCan-backups
+/GamingControler/SmartTrashCan-backups
+/IoTBoard/SmartTrashCan-backups
