--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /BusinessCard/SmartTrashCan-backups
 /GamingControler/SmartTrashCan-backups
 /IoTBoard/SmartTrashCan-backups
+/GamingControler/GamingControler-backups
