--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /GamingControler/SmartTrashCan-backups
 /IoTBoard/SmartTrashCan-backups
 /GamingControler/GamingControler-backups
+IoTBoard/ZU_H_T_eng_biela.svg
